@@ -85,6 +85,7 @@ PART
 		uncagedLock = false // true: Allows missile to be cued to a radar target, also controls launch conditions, see above
         // allAspect = false // DEPRECATED - use uncagedLock instead
         lockedSensorFOV = 6 // How much the seeker can see in the direction it is looking (in terms of angle cone).
+        flareEffectivity = 1 // Modifies how the missile targeting is affected by flares, 1 is fully affected (normal behavior), lower values mean less affected (0 is ignores flares), higher values means more affected. This is a simple multiplier for flares, use the locked sensor bias curves for more sophisticated flare rejection behavior.
         lockedSensorFOVBias
         {
             // floatcurve to define how the missile weights targets and flares off the center of where the seeker is looking
